# ros2_apriltag_test

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  realsense_sender.py  requirements.txt  standalone_demo.py  webcam_sender.py
src/apriltag_detector/: package.xml  setup.cfg  setup.py
src/apriltag_detector/apriltag_detector/: __init__.py  apriltag_detector_node.py  lego_detector_node.py  realsense_receiver_node.py  visualization_node.py  web_viewer_node.py  webcam_receiver_node.py
src/apriltag_detector/config/: apriltag_params.yaml
src/apriltag_detector/launch/: apriltag_demo.launch.py  lego_demo.launch.py  realsense_wsl.launch.py
