[project]
name = "apriltag-detector"
version = "1.0.0"
description = "AprilTag detection for AutonOHM atwork robot - RoboCup German Open"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyzmq>=25.0.0",
    "pupil-apriltags>=1.0.0",
]

[project.scripts]
apriltag-demo = "standalone_demo:main"
webcam-sender = "webcam_sender:main"

[tool.uv]
dev-dependencies = []
